aula 07 de estilo css

--- a/pw1-cleokennedy/index.html
+++ b/pw1-cleokennedy/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/estilo.css">
     <title>Cantina da Kléo</title>
 </head>
-<body style="background-color:  rgb(189, 251, 194);">
- <h1 style="text-align: center;"><b> Cantina da kléo</b></h1> 
+<body>
+ <h1><b> Cantina da kléo</b></h1> 
  <h1>Menu</h1>  
 <img src="images/churrasco.jpg" alt="">
 <img src="images/comida.jpg" alt="" width="250" height="170">
 <img src="images/coxinha.jpg" alt="">
 <h2>COMIDA CASEIRA À MODA CARIOCA</h2>
-<h2>cardápio</h2>
+<h2>CARDÁPIO</h2>
 <table>
     <tr>
         <th>baião de dois</th>
@@ -44,6 +45,7 @@
 </table>
 <h2>Endereço: Avenida tiradentes 1500 - São Paulo </h2>
 <h3>Telefone: 11 2222-3333</h3>
-<h3 style="color: red;">Instagran: @CantinadaKleo.comidacarioca</h3>
+<h3>Instagran: @CantinadaKleo.comidacarioca</h3>
+
 </body>
 </html>
