--- a/exercicios/exe_10.html
+++ b/exercicios/exe_10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PWI-cleo</title>
+    <title>PWI-ANNA</title>
     <h1>Verifique se Você é Maior ou Menor de Idade</h1>
 
     <div class="form-container">
