--- a/exercicios/exe_6.html
+++ b/exercicios/exe_6.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>PWI-cleo</title>
+<title>PWI-ANNA</title>
 <h2>Exercicios JavaScript</h2>
 <p id = "demo1"></p>
 <script>
