--- a/exercicios/exe_7.html
+++ b/exercicios/exe_7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>PWI-cleo</title>
+    <title>PWI-ANNA</title>
     <h2>Exercicio JavaScript 7</h2>
     <p id = "demo1"></p>
     <script>
