--- a/exercicios/exe_8.html
+++ b/exercicios/exe_8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabuada de 1 a 10</title>
-    <style> 
+    <style> /* Pedi para o IA montar esse codigo pra mim */
         body {
             font-family: Arial, sans-serif;
             text-align: center;
